dartagnan/src/test/resources/spirv-clang/sourcelocation_tests/races/fail/write_write/normal.spv.dis
; @Input: %14 = {0, 0, 0, 0, 0, 0, 0, 0}
; @Input: %11 = 8
; @Config: 8, 1, 1
; SPIR-V
; Version: 1.0
; Generator: Khronos LLVM/SPIR-V Translator; 14
; Bound: 22
; Schema: 0
               OpCapability Addresses
               OpCapability Linkage
               OpCapability Kernel
          %1 = OpExtInstImport "OpenCL.std"
               OpMemoryModel Physical32 OpenCL
               OpEntryPoint Kernel %9 "foo" %__spirv_BuiltInLocalInvocationId
               OpSource OpenCL_C 200000
               OpName %__spirv_BuiltInLocalInvocationId "__spirv_BuiltInLocalInvocationId"
               OpDecorate %__spirv_BuiltInLocalInvocationId BuiltIn LocalInvocationId
               OpDecorate %__spirv_BuiltInLocalInvocationId Constant
               OpDecorate %10 FuncParamAttr NoCapture
               OpDecorate %__spirv_BuiltInLocalInvocationId LinkageAttributes "__spirv_BuiltInLocalInvocationId" Import
       %uint = OpTypeInt 32 0
     %uint_0 = OpConstant %uint 0
     %uint_7 = OpConstant %uint 7
     %v3uint = OpTypeVector %uint 3
%_ptr_Input_v3uint = OpTypePointer Input %v3uint
       %void = OpTypeVoid
%_ptr_Workgroup_uint = OpTypePointer Workgroup %uint
          %8 = OpTypeFunction %void %_ptr_Workgroup_uint
       %bool = OpTypeBool
%__spirv_BuiltInLocalInvocationId = OpVariable %_ptr_Input_v3uint Input
          %9 = OpFunction %void None %8
         %10 = OpFunctionParameter %_ptr_Workgroup_uint
         %11 = OpLabel
         %14 = OpLoad %v3uint %__spirv_BuiltInLocalInvocationId Aligned 16
         %15 = OpCompositeExtract %uint %14 0
         %16 = OpInBoundsPtrAccessChain %_ptr_Workgroup_uint %10 %15
               OpStore %16 %15 Aligned 4
         %19 = OpIEqual %bool %15 %uint_0
               OpBranchConditional %19 %12 %13
         %12 = OpLabel
         %21 = OpInBoundsPtrAccessChain %_ptr_Workgroup_uint %10 %uint_7
               OpStore %21 %uint_0 Aligned 4
               OpBranch %13
         %13 = OpLabel
               OpReturn
               OpFunctionEnd
